--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ h3.318V9.168L26.258,9.15c-5.072,0-6.225,3.796-6.225,6.224v3.394H17.1v5.242h2.933
                                         <a href="tel:+380632213472" target="" class="t-btn zphone" style="color:#ffffff;background-color:#ff001f;border-radius:20px; -moz-border-radius:20px; -webkit-border-radius:20px;">
                                             <table style="width:100%; height:100%;">
                                                 <tr>
-                                                    <td>+38 063 221 34 72</td>
+                                                    <td class="zphone">+38 063 221 34 72</td>
                                                 </tr>
                                             </table>
                                         </a>
