--- a/index.html
+++ b/index.html
@@ -71,23 +71,8 @@
             });
         }
     </script>
-    
-    <script>
-	    (function(w, c) {
-	        (w[c] = w[c] || []).push(
-	            function() {
-	                new zTracker({
-	                    "id": "2e57de26b3d7d17006f0fb7a2fec88415544",
-	                    "metrics": {
-	                        "ga": "ua-27586740"
-	                    },
-	                    "cssClass": "zphone"
-	                });
-	            });
-	    })(window, "zTrackerCallbacks");
-	</script>
-	<script async id="zd_ct_phone_script" src="https://my.zadarma.com/js/ct_phone.min.js"> 
-	</script>
+    <script>(function(w, c){(w[c]=w[c]||[]).push(function(){new zTracker({"id":"2e57de26b3d7d17006f0fb7a2fec88415544","metrics":{"ga":"ua-27586740"}});});})(window, "zTrackerCallbacks");</script>
+    <script async id="zd_ct_phone_script" src="https://my.zadarma.com/js/ct_phone.min.js"></script>
 </head>
 
 <body class="t-body" style="margin:0;">
